--- a/main.css
+++ b/main.css
@@ -11,11 +11,11 @@ body{
 }
 
 
-h1{
+#product-overview h1{
     color:white;
     font-family: 'Anton', sans-serif;
 }
 
-/* h1{
+ h1{
     font-family: sans-serif;
-} */
+} 
