--- a/main.css
+++ b/main.css
@@ -1,11 +1,16 @@
 
 body{
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #product-overview{
-    background:#ff1b68
-}
+    background:#ff1b68;
+    padding: 20px;
+    border-style: solid;
+    border-color:black;
+    border-width:5px;
+    margin:20px;
+    }
 .section-title{
     color:#2ddf5c
 }
