--- a/main.css
+++ b/main.css
@@ -1,16 +1,16 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
+    margin:0
 }
 
 #product-overview{
     background:#ff1b68;
     padding: 20px;
-    border-style: solid;
-    border-color:black;
-    border-width:5px;
+    border:5px solid black;
     margin:20px;
     }
+
 .section-title{
     color:#2ddf5c
 }
