--- a/main.css
+++ b/main.css
@@ -26,3 +26,9 @@ body{
  h1{
     font-family: sans-serif;
 } 
+
+.main-header{
+    background:#2ddf5c;
+    padding:8px 16px;
+    width: 100%;   
+}
