--- a/main.css
+++ b/main.css
@@ -38,12 +38,12 @@ body{
 .main-nav{
     display:inline-block;
     text-align: right;
-    width: calc(100%-49px);
+    width: calc(100% - 54px);
 }
 .main-nav__items{
      margin:0;
      padding:0;
-     list-style:none;
+     list-style: none;
 }
 .main-nav__item{
     display: inline-block;
