--- a/main.css
+++ b/main.css
@@ -62,3 +62,9 @@ body{
     text-decoration: none;
 }
 
+.main-nav__item a:hover{
+    color:white;
+}
+.main-nav__item a:active{
+    color:white;
+}
