--- a/main.css
+++ b/main.css
@@ -60,9 +60,12 @@ body{
 .main-nav__item a{
     color:#0e4f1f;
     text-decoration: none;
+    font-weight: bold;
+    padding: 3px 0 ;
 }
 .main-nav__item a:active,
 .main-nav__item a:hover{
     color:white;
+    border-bottom: 5px solid white;
 }
 
