--- a/main.css
+++ b/main.css
@@ -68,4 +68,15 @@ body{
     color:white;
     border-bottom: 5px solid white;
 }
-
+.main-nav__item--cta a{
+    color:white;
+    background:#ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+.main-nav__item--cta a:active,
+.main-nav__item--cta a:hover{
+color:#ff1b68;
+background:white;
+border:none;
+}
