--- a/main.css
+++ b/main.css
@@ -37,8 +37,8 @@ body{
     background:#19b84c;
     color:white;
     box-shadow: 2px 2px 2px 2px rgb(0, 0, 0,0.5);
-    
 }
+
 .plan__annotation {
     background:white;
     color:#19b84c;
@@ -80,10 +80,15 @@ border-radius: 8px;
 font-weight: bold;
 cursor:pointer;
 }
+
 .button:active,
 .button:hover{
     background:white;
     color:#0e4f1f;
+}
+
+.button:focus{
+    outline:none;
 }
  /* h1{
     font-family: sans-serif;
