Styling the headling of the core feature section

--- a/main.css
+++ b/main.css
@@ -90,6 +90,16 @@ cursor:pointer;
 .button:focus{
     outline:none;
 }
+
+#key-features{
+    background:#ff1b68;
+    margin-top: 80px;
+    padding:16px;
+}
+
+#key-features .section-title{
+    color:white;
+}
  /* h1{
     font-family: sans-serif;
 }  */
