--- a/main.css
+++ b/main.css
@@ -100,6 +100,33 @@ cursor:pointer;
 #key-features .section-title{
     color:white;
 }
+
+.key-feature__list{
+padding: 0;
+margin:0;
+list-style: none;
+text-align: center;
+}
+.key-feature{
+    display: inline-block;
+    width:30%;
+    vertical-align: top;
+}
+.key-feature__image{
+    background: #ffcede;
+    width:128px;
+    height:128px;
+    border:2px solid #424242;
+    border-radius: 50%;
+    margin:auto;
+}
+
+.key-feature__description{
+    text-align: center;
+    font-weight: bold;
+    color:white;
+    font-size:20px;
+}
  /* h1{
     font-family: sans-serif;
 }  */
