--- a/packages/packages.css
+++ b/packages/packages.css
@@ -30,13 +30,20 @@ padding-top:32px;
     color:#0e4f1f;
     background: white;
 }
+.clearfix{
+    clear: both;
+}
 
 #plus{
     background:rgba(213,255,220,0.95);
 }
 
 #free{
+    float:right;
     background:rgba(234,252,237,0.95);
+    border-right:none;
+    border-left: 4px solid #0e4f1f;
+    text-align: right;
 }
 
 #premium{
