--- a/packages/packages.css
+++ b/packages/packages.css
@@ -11,9 +11,12 @@ padding-top:32px;
 .package:hover,
 .package:active{
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-    border-color:#ff5454;
+    border-color:#ff5454 /* !important */;
 }
-
+#free:hover,
+#free:active{
+    border-left-color:#ff5454;
+}
 .package a {
     text-decoration: none;
     color:inherit;
