--- a/Positioning/main.css
+++ b/Positioning/main.css
@@ -27,3 +27,12 @@ body {
     border: 5px solid black;
     margin: 10px;
 }
+.parent .child-1{
+  position: fixed ;
+  width:100%;
+  border:solid black 5px;
+  box-sizing: border-box;
+  left:0;
+  top: 0;
+  margin:0;
+}
