--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,7 +1,12 @@
 main{
 padding-top:32px;
 }
-
+.background{
+    background:url("../images/plans-background.jpg");
+    width:100%;
+    height:100%;
+    position: fixed;
+}
 .package{
     width:80%;
     border:solid #0e4f1f 4px;
