--- a/packages/packages.css
+++ b/packages/packages.css
@@ -13,6 +13,7 @@ padding-top:32px;
     border:solid #0e4f1f 4px;
     border-left:none;
     margin:16px 0;
+    position: relative;
 }
 .package:hover,
 .package:active{
@@ -28,6 +29,13 @@ padding-top:32px;
     color:inherit;
     display:block;
     padding:32px;
+}
+.package__badge{
+    position: absolute;
+    top:0;
+    left:400px;
+    margin:20px;
+   
 }
 .package__subtitle{
     color:#979797;
