--- a/Shared.css
+++ b/Shared.css
@@ -11,6 +11,7 @@ body{
     position:fixed;
     padding:8px 16px;
     width: 100%;   
+    z-index:1;
 }
 .main-header>div{
     display:inline-block;
