--- a/Advanced Track/main.css
+++ b/Advanced Track/main.css
@@ -4,11 +4,13 @@
     /* background: url("freedom.jpg"); */
     background-image: url("freedom.jpg");
     background-size: cover;
+    background-position:left 10% bottom 20%;
     background-repeat: no-repeat;
     width: 100%;
     height: 528px;
     padding: 10px;
     margin-top: 43px;
+    border:dashed red;
     position: relative;
 }
 
