--- a/Advanced Track/main.css
+++ b/Advanced Track/main.css
@@ -8,6 +8,8 @@
     background-repeat: no-repeat;
     background-origin:border-box ;
     background-clip: border-box; */
+    /* background-image: linear-gradient(180deg,red,blue,green,yellow,#fa923f); */
+    background-image: linear-gradient(180deg,red 70%,rgba(0,0,0,0.3),transparent);
     width: 100%;
     height: 528px;
     padding: 10px;
