--- a/Advanced Track/customers/customers.css
+++ b/Advanced Track/customers/customers.css
@@ -1,5 +1,5 @@
 .testimonial {
-    font-size: 20px;
+    font-size: 1.2rem;
     margin: 48px 0;
   }
   
@@ -11,15 +11,17 @@
   .testimonial:first-of-type {
     margin-top: 96px;
   }
-  .testimonial__image-container{
-      width:65%;
-      max-width: 580px;
-      display: inline-block;
-      vertical-align: middle;
-      box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, .3);
+
+  .testimonial__image-container {
+    width: 65%;
+    max-width: 580px;
+    display: inline-block;
+    vertical-align: middle;
+    box-shadow: 3px 3px 5px 3px rgba(0,0,0,0.3);
   }
-  .testimonial__image{
-    width:100%;
+
+  .testimonial__image {
+    width: 100%;
     vertical-align: top;
   }
   
@@ -42,11 +44,12 @@
   .testimonial__name {
     margin: 3px;
     color: #ff5454;
+    font-size: 2rem;
   }
   
   .testimonial__subtitle {
     margin: 0;
-    font-size: 18px;
+    font-size: 1.1rem;
     color: #ccc;
   }
   
