--- a/Responsive Website/main.css
+++ b/Responsive Website/main.css
@@ -37,6 +37,15 @@
     font-size: 3rem;
   }
 }
+@media (min-width: 60rem) {
+  #product-overview {
+    height: 50vh;
+    background-position: 50% 25%;
+  }
+  #product-overview h1{
+    font-size: 5rem;
+  }
+}
 
 .section-title {
   color: #2ddf5c;
