--- a/Responsive Website/main.css
+++ b/Responsive Website/main.css
@@ -43,10 +43,7 @@
   text-align: center;
 }
 
-/* .plan__list {
-  width: 100%;
-  text-align: center;
-} */
+
 
 .plan {
   background: #d5ffdc;
@@ -59,7 +56,6 @@
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5); */
 }
 
 .plan__annotation {
@@ -94,6 +90,24 @@
 
 .plan__feature {
   margin: 0.5rem 0;
+}
+
+@media(min-width:40rem){
+  .plan__list {
+  width: 100%;
+  text-align: center;
+}
+  .plan{
+    vertical-align: middle;
+    width:30%;
+    display:inline-block;
+    min-width: 13rem;
+    max-width: 25rem;
+  }
+
+  .plan--highlighted{
+      box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5); 
+  }
 }
 
 #key-features {
