--- a/Responsive Website/main.css
+++ b/Responsive Website/main.css
@@ -129,9 +129,9 @@
 }
 
 .key-feature {
-  display: inline-block;
-  width: 30%;
-  vertical-align: top;
+  display:block;
+  width: 100%;
+  /* vertical-align: top; */
 }
 
 .key-feature__image {
@@ -150,7 +150,14 @@
   color: white;
   font-size: 1.2rem;
 }
-
+@media(min-width:40rem){
+  .key-feature{
+    display: inline-block;
+    width:30%;
+    max-width:25rem;
+    vertical-align: top;
+  }
+}
 /* h1 {
     font-family: sans-serif;
 } */
