--- a/Forms/start-hosting/start-hosting.css
+++ b/Forms/start-hosting/start-hosting.css
@@ -1,6 +1,12 @@
 main{
     padding:2rem;
 }
+.signup-form{
+    padding: 1rem;
+}
+.signup-form label{
+    font-weight: bold;
+}
 .signup-title{
     text-align:center;
     font-size:1.8rem;
@@ -13,4 +19,22 @@ main{
     display:block;
     margin:1rem;
     width: 100%;
+}
+/* .signup-form input[type="checkbox"]*/
+.signup-form input[id*="terms"],
+.signup-form input[id*="terms"]+label{
+display: inline-block;
+width:auto;
+}
+
+.signup-form button[type="submit"]{
+    display: block;
+    margin-top: 1rem;
+}
+
+@media(min-width:40rem){
+    .signup-form{
+        margin:auto;
+        width:25rem;
+    }
 }
